--- a/css/style.css
+++ b/css/style.css
@@ -335,6 +335,10 @@ img{
     align-items: center;
 }
 
+.button--small {
+    padding: .75rem 1rem;
+}
+
 /*======================= ABout ===================== */
 
 .about__img{
@@ -533,4 +537,43 @@ img{
     color: var(--first-color);
 }
 
+/*============================ Project ========================== */
 
+.project__container {
+    overflow: initial;
+}
+
+.project__content {
+    padding: 0 1.5rem;
+}
+
+.project__img {
+    width: 265px;
+    border-radius: .5rem;
+    justify-self: center;
+}
+
+.project__title {
+    font-size: var(--h3-font-size);
+    margin-bottom: var(--mb-0-5);
+}
+
+.project__description {
+    margin-bottom: var(--mb-0-75);
+}
+
+.project__button:hover .button__icon {
+    transform: rotateX(.25rem);
+}
+
+.swiper-container {
+    margin-top: 100px;
+    position: relative;
+
+  }
+
+  .swiper-button-prev::after,
+  .swiper-button-next::after{
+    content: '';
+  }
+  
