--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,8 @@ img{
 .section__title,
 .section__subtitle{
     text-align: center;
+    letter-spacing: 2px;
+    
 }
 
 
@@ -272,6 +274,7 @@ img{
 
 .home__title {
     font-size: var(--big-font-size);
+    
 }
 .home__subtitle {
     font-size: var(--h3-font-size);
@@ -280,7 +283,9 @@ img{
     margin-bottom: var(--mb-0-75);
 } 
 .home__description {
+    font-size: small;
     margin-bottom: var(--mb-2);
+    letter-spacing: 1.5px;
 }
 
 .home__scroll {
@@ -322,13 +327,14 @@ img{
 }
 
 .button:hover{
-    background-color: var(--first-color-alt);
+    background-color: black;
 }
 
 .button__icon {
     font-size: 1rem;
     margin-left: var(--mb-0-5);
     transition: .3s;
+    
 }
 .button--flex{
     display: inline-flex;
@@ -337,6 +343,12 @@ img{
 
 .button--small {
     padding: .75rem 1rem;
+}
+.button--white:hover  {
+    background-color: #fff;
+    color: var(--first-color);
+    font-weight: bold;
+
 }
 
 /*======================= ABout ===================== */
@@ -349,7 +361,10 @@ img{
 }
 .about__description {
     text-align: center;
+    letter-spacing: 2px;
+    word-spacing: 2px;
     margin-bottom: var(--mb-2-5);
+    
 }
 
 .about__info {
@@ -541,6 +556,10 @@ img{
 
 .project__container {
     overflow: initial;
+    padding: 30px;
+    border-radius: 1rem;
+    box-shadow: 5px 5px 0 black,
+    10px 10px 0 var(--first-color);
 }
 
 .project__content {
@@ -555,13 +574,13 @@ img{
 
 .project__title {
     margin-top: var(--mb-0-75);
-    margin-bottom: var(--mb-0-5);
+    margin-bottom: var(--mb-1-5);
     font-size: var(--h3-font-size);
     
 }
 
 .project__description {
-    margin-bottom: var(--mb-0-75);
+    margin-bottom: var(--mb-1-5);
 }
 
 .project__button:hover .button__icon {
@@ -578,4 +597,125 @@ img{
   .swiper-button-next::after{
     content: '';
   }
+ 
   
+  /* ================ Project in mind ================= */
+
+  .pjmind {
+    text-align: center;
+}
+.pjmind__bg {
+    background-color: black;
+    padding: 4rem;
+  }
+
+  .pjmind__title {
+    
+    color: var(--first-color);
+    font-size: var(--h2-font-size);
+    margin-bottom: var(--mb-3);
+    margin-top: var(--mb-2);
+  }
+ 
+
+  .pjmind__description {
+    color: #fff;
+    margin-bottom: var(--mb-3);
+    margin-top: var(--mb-3);
+  }
+
+ /* ================ Contact me ================= */
+ .contact__container {
+    row-gap: 3rem;
+ }
+
+ .contact__information {
+    display: flex;
+    margin-bottom: var(--mb-2);
+ }
+
+ .contact__icon {
+    font-size: 2rem;
+    color: var(--first-color);
+    margin-right: var(--mb-0-75);
+ }
+
+ .contact__title {
+    font-size: var(--h3-font-size);
+ }
+
+ .contact__subtitle {
+    font-size: var(--small-font-size);
+    color: var(--text-color-light);
+ }
+
+ .contact__content {
+    background-color: var(--input-color);
+    border-radius: .5rem;
+    padding: .75rem 1rem .25rem;
+ }
+
+ .contact__lable {
+    font-size: small;
+    color: var(--title-color);
+ }
+
+ .contact__input{
+    width: 100%;
+    background-color: var(--input-color);
+    color: var(--text-color);
+    font-family: var(--body-font);
+    font-size: var(--normal-font-size);
+    border: none;
+    outline: none;
+    padding: .25rem .5rem .5rem 0;
+ }
+
+ /*============== Footer ================== */
+
+ .footer {
+    padding-top: 2rem;
+ }
+
+ .footer__container {
+    row-gap: 3.5rem;
+ }
+
+ .footer__bg {
+    background-color: var(--first-color);
+    padding: 2rem 0 3rem;
+ }
+
+ .footer__title {
+    font-size: var(--h2-font-size);
+    margin-bottom: var(--mb-0-25);
+ }
+ .footer__subtitle {
+    font-size: var(--small-font-size);
+ }
+ .footer__links {
+    display: flex;
+    flex-direction: column;
+    row-gap: 1.5rem;
+ }
+.footer__link {
+    font-weight: bold;
+    color: #000000;
+ }
+.footer__link:hover {
+    color: #fff;
+}
+
+.footer__social {
+    font-size: 1.25rem;
+    margin-right: var(--mb-1);
+}
+.footer__social:hover {
+    color: #000000;
+}
+
+
+.footer__subtitle,
+.footer__social {
+    color: #fff;
+}
