--- a/css/style.css
+++ b/css/style.css
@@ -567,7 +567,7 @@ img{
 }
 
 .project__img {
-    margin-top: var(--mb-3);
+    margin-top: var(--mb-2-5);
     width: 265px;
     border-radius: .5rem;
     justify-self: center;
