--- a/css/style.css
+++ b/css/style.css
@@ -71,10 +71,37 @@
     --small-font-size: .875rem;
     --smaller-font-size: .813rem;
     
-    }
-    
 }
 
+}
+
+    /* ========== Dark Theme ===========  */
+    body.dark-theme {
+         /*=========== HSL color mode ============== */
+    --first-color-second: hsl(var(--hue-color), 70%, 50%);
+    --title-color: hsl(var(--hue-color), 8%, 15%);
+    --text-color: hsl(var(--hue-color), 10%, 45%);
+    --input-color: hsl(var(--hue-color), 70%, 90%);
+    --body-color: hsl(var(--hue-color), 60%, 99%);
+    --container-color: #fff;
+    }
+
+/* ================= Button Dark Theme ============ */
+
+.nav__btns {
+    display: flex;
+    align-items: center;
+}
+.change-theme {
+    font-size: 1.25rem;
+    color: var(--title-color);
+    margin-right: var(--mb-1-5);
+    cursor: pointer;
+    
+}
+.change-theme:hover {
+    color: var(--first-color);
+}
 
 /*================== base ==============*/
 *{
@@ -116,7 +143,7 @@ img{
 
 .section{
     padding: 2rem 0 4rem;
-
+    
 }
 
 .section__title{
@@ -127,7 +154,7 @@ img{
     display: block;
     font-size: var(--small-font-size);
     margin-bottom: var(--mb-3);
-
+    
 }
 
 .section__title,
@@ -161,24 +188,29 @@ img{
 
 /*====================== NAV ========================*/
 .nav{
-        max-width: 968px;
+    max-width: 968px;
         height: var(--header-height);
         display: flex;
         justify-content: space-between;
         align-items: center;
+    }
+    
+    .nav__logo, 
+    .nav__toggle{
+        color: var(--title-color);
+        font-weight: var(--font-semi-bold);
+    letter-spacing: 1.5px;
 }
 
-.nav__logo, 
-.nav__toggle{
-    color: var(--title-color);
-    font-weight: var(--font-medium);
+.nav__logo:hover span{
+    display: none;
 }
-
-.nav__logo:hover{
+.nav__logo:hover:before {
+    content: "Min Thiha Kyaw";
     color: var(--first-color);
 }
 .nav__toggle{
-    font-size: 1.1rem;
+    font-size: 1.25rem;
     cursor: pointer;
 }
 .nav__toggle:hover{
@@ -238,6 +270,18 @@ img{
     bottom: 0;
 } 
 
+/* Active link */
+
+.active-link {
+    color: var(--first-color);
+}
+
+/* change header background */
+
+.scroll-header{
+    box-shadow: 0 -1px 4px rgba(0, 0, 0, .15); 
+}
+
 /* ============== Home ================= */
 
 .home__container {
@@ -254,6 +298,7 @@ img{
     display: grid;
     grid-template-columns: max-content;
     row-gap: 1rem;
+
 }
 
 .home__social-icon {
@@ -555,16 +600,19 @@ img{
 /*============================ Project ========================== */
 
 .project__container {
+    background-color: #f4f4f4;
     margin-right: 40px;
     height: 80%;
     overflow: initial;
     padding: 30px;
     border-radius: 1rem;
-    box-shadow: 5px 5px 0 black,
+    border: 3px solid #000000;
+    box-shadow: 5px 5px 0 #000000,
     10px 10px 0 var(--first-color);
 }
 
 .project__content {
+    margin-top: var(--mb-0-5);
     padding: 0 1.5rem;
 }
 
@@ -717,8 +765,23 @@ img{
     color: #000000;
 }
 
-
 .footer__subtitle,
 .footer__social {
     color: #fff;
+}
+
+.footer__icon{
+    font-size: medium;
+    margin-right: var(--mb-0-5);
+}
+
+.footer__icon:hover {
+    font-size: large;
+}
+.footer__description{
+    font-size: var(--smaller-font-size);
+    letter-spacing: 1px;
+    color: #fff;
+    text-align: center;
+    margin-top: var(--mb-3);
 }
