--- a/css/style.css
+++ b/css/style.css
@@ -1011,10 +1011,10 @@ img{
         }
     }
 
-    @media screen and (min-width: 1600px){
+    @media screen and (max-width: 1300px){
        
         .project__container{
-            height: 35%;
+            height: 30%;
             width: 70%;
             grid-template-columns: max-content;
             justify-content: center;
