--- a/css/style.css
+++ b/css/style.css
@@ -414,9 +414,10 @@ img{
 }
 .about__description {
     text-align: center;
-    letter-spacing: 2px;
-    word-spacing: 2px;
-    margin-bottom: var(--mb-2-5);
+    letter-spacing: 1px;
+    word-spacing: 1px;
+    margin-bottom: var(--mb-3);
+    font-size: var(--small-font-size);
     
 }
 
@@ -913,6 +914,14 @@ img{
             margin-top: 4rem;
             width: 200px;
         }
+        .about__description {
+            text-align: center;
+            letter-spacing: .5px;
+            word-spacing: .5px;
+            margin-bottom: var(--mb-3);
+            font-size: var(--small-font-size);
+            
+        }
 
         .contact__information {
             margin-top: 5.5rem;
@@ -987,8 +996,16 @@ img{
         .about__container {
             column-gap: 5rem;
         }
+        .about__description {
+            text-align: center;
+            letter-spacing: 1px;
+            word-spacing: 1px;
+            margin-top: var(--mb-3);
+            font-size: var(--small-font-size);
+            
+        }
         .about__img {
-            width: 250px;
+            width: 280px;
         }
         .project__img {
             width: 350px;
@@ -1011,7 +1028,22 @@ img{
     }
 
    
+@media screen and (min-width: 1024px) {
 
+    
+
+    .header,
+    .main,
+    .footer__container{
+        padding: 0;
+    }
+
+    .about__description {
+        text-align: center;
+        margin-top: var(--mb-3);
+        font-size: var(--smaller-font-size);
+
+}
    
-  
+}
   
