--- a/css/style.css
+++ b/css/style.css
@@ -892,7 +892,12 @@ img{
     .footer__container {
         margin: 0 20px 0 20px;
     }
+   
     .footer__description{
+        font-size: var(--smaller-font-size);
+        letter-spacing: 1px;
+        color: #fff;
+        text-align: center;
         margin: var(--mb-0-75) var(--mb-0-5) var(--mb-0-75) var(--mb-0-5);
     }
   }
@@ -960,7 +965,13 @@ img{
             justify-self: flex-end;
             margin-right: 1em;
         }
-        
+        .footer__description{
+            font-size: var(--smaller-font-size);
+            letter-spacing: 1px;
+            color: #fff;
+            text-align: center;
+            margin-top: var(--mb-3);
+        }
     }
 
     @media screen and (min-width: 768px){
@@ -1043,6 +1054,13 @@ img{
             margin-top: 5rem;
             margin-right: 40%;
         }
+        .footer__description{
+            font-size: var(--smaller-font-size);
+            letter-spacing: 1px;
+            color: #fff;
+            text-align: center;
+            margin-top: var(--mb-3);
+        }
     }
 
    
@@ -1063,6 +1081,13 @@ img{
     .qualification__calender {
     font-size: var(--smaller-font-size);
     color: var(--text-color-light);
+}
+.footer__description{
+    font-size: var(--smaller-font-size);
+    letter-spacing: 1px;
+    color: #fff;
+    text-align: center;
+    margin-top: var(--mb-3);
 }
 }
   
