--- a/css/style.css
+++ b/css/style.css
@@ -188,7 +188,7 @@ img{
 .header{
     width: 100%;
     position: fixed;
-    bottom: 0;
+    top: 0;
     left: 0;
     z-index: var(--z-fixed);
     background-color:var(--body-color) ;
@@ -228,13 +228,13 @@ img{
 @media screen and (max-width: 767px){
     .nav__menu{
         position: fixed;
-        bottom: -100%;
+        top: -100%;
         left: 0;
         width: 100%;
         background-color: var(--body-color);
         padding: 2rem 1.5rem 4rem;
-        box-shadow: 0 -1px 4px rgba(0, 0, 0, .15);
-        border-radius: 1.5rem 1.5rem 0 0;
+        box-shadow: 0 1px 50px rgba(0, 0, 0, .15);
+        border-radius: 0 0 1.5rem 1.5rem;
         transition: .4s;
     }
 }
@@ -275,7 +275,7 @@ img{
 /* ========= show menu ========== */
 
 .show-menu{
-    bottom: 0;
+    top: 0;
 } 
 
 /* Active link */
@@ -948,17 +948,14 @@ img{
 
         .footer__container {
             height: 20%;
-            grid-template-columns: repeat(3, 1fr);
+            grid-template-columns: repeat(2, 1fr);
+            font-size: var(--smaller-font-size);
         }
         .footer__links{
             flex-direction: row;
-            column-gap: 2rem;
+            column-gap: 1rem;
         }
-        .footer__socials{
-            justify-self: flex-end;
-            margin-right: 1em;
-        }
-       
+        
     }
 
     @media screen and (min-width: 768px){
@@ -1033,13 +1030,10 @@ img{
         }
         .footer__links{
             display: none;
-            margin-top: 35%;
-            flex-direction: row;
-            column-gap: 2rem;
         }
         .footer__socials{
-            margin-top: 5rem;
-            margin-right: 40%;
+           justify-content: center;
+           margin-left: 40%;
         }
        
     }
