--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,8 @@ body{
     font-size: var(--normal-font-size);
     background-color: var(--body-color);
     color: var(--text-color);
+    user-select: none;
+
 }
 
 h1,h2,h3,h4{
