--- a/css/style.css
+++ b/css/style.css
@@ -284,9 +284,18 @@ img{
 
 .active-link {
     color: var(--first-color);
-    border-bottom: solid 2px var(--first-color);
-    padding-bottom: 6px;
-    border-radius: 1px;
+    border: none;
+}
+
+@media screen and (min-width: 767px){
+    
+    .active-link {
+        color: var(--first-color);
+        border-bottom: solid 2px var(--first-color);
+        padding-bottom: 6px;
+        border-radius: 1px;
+    }
+
 }
 
 /* change header background */
