--- a/css/style.css
+++ b/css/style.css
@@ -586,6 +586,7 @@ img{
     display: grid;
     grid-template-columns: 1fr max-content ;
     column-gap: 1.5rem;
+    margin-bottom: 10px;
 }
 
 .qualification__title {
