--- a/css/style.css
+++ b/css/style.css
@@ -645,24 +645,47 @@ img{
 }
 
 .project__img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-top: var(--mb-0-25);
     width: 265px;
     border-radius: .5rem;
-    justify-self: center;
+    margin: auto;
+    
     
 }
-
+.project__data {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: var(--mb-1-5);
+    justify-content: center;
+    align-items: center;
+}
 .project__title {
     margin-top: var(--mb-0-5);
     margin-bottom: var(--mb-1-5);
     font-size: var(--h3-font-size);
     color: #000000;
 }
+.project_section_sub {
+    margin-top: var(--mb-2-5);
+    font-size: larger;
+}
+.project_section_subline {
+    display: flex;
+    background-color: var(--first-color);
+    width: 110px;
+    height: 5px;
+    margin: auto;
+    margin-bottom: var(--mb-1-5);
+    margin-top: -40px;
+    border-radius: 2px;
+}
 
 .project__description {
     margin-bottom: var(--mb-1-5);
 }
-
 .project__button:hover .button__icon {
     transform: rotateX(.25rem);
 }
@@ -672,6 +695,7 @@ img{
     position: relative;
 
   }
+
 
   .swiper-button-prev::after,
   .swiper-button-next::after{
